Added videos on new activity, changed logos and added strings

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,8 @@
     package="org.intelehealth.intelesafe">
     <!-- To auto-complete the email text field in the login form with the user's emails -->
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
-    <uses-permission android:name="android.permission.READ_PROFILE" />
-<!--    <uses-permission android:name="android.permission.READ_CONTACTS" />-->
-    <uses-permission android:name="android.permission.CALL_PHONE"/>
+    <uses-permission android:name="android.permission.READ_PROFILE" /> <!-- <uses-permission android:name="android.permission.READ_CONTACTS" /> -->
+    <uses-permission android:name="android.permission.CALL_PHONE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
@@ -22,13 +21,12 @@
     <uses-feature
         android:name="android.hardware.camera"
         android:required="true" /> <!-- added support to lenova tab 2 -->
-
     <uses-feature
         android:name="android.hardware.camera.autofocus"
         android:required="false" />
 
     <application
-        android:name="org.intelehealth.intelesafe.app.IntelehealthApplication"
+        android:name=".app.IntelehealthApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/swasth_sampark"
@@ -38,31 +36,29 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".activities.appointments.AppointmentsActivity"
+        <activity android:name=".activities.videosActivity.VideosActivity"></activity>
+        <activity
+            android:name=".activities.appointments.AppointmentsActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
-            android:screenOrientation="portrait"/>
-        <!-- fb sdk -->
+            android:screenOrientation="portrait" /> <!-- fb sdk -->
         <meta-data
             android:name="com.facebook.sdk.ApplicationId"
-            android:value="@string/facebook_app_id"/>
-
-<!--        Fb App Events: Auto-Logging of events is enabled...-->
+            android:value="@string/facebook_app_id" /> <!-- Fb App Events: Auto-Logging of events is enabled... -->
         <meta-data
             android:name="com.facebook.sdk.AutoLogAppEventsEnabled"
-            android:value="true"/>
+            android:value="true" />
 
-
-        <activity android:name="org.intelehealth.intelesafe.activities.homeActivity.Webview" />
+        <activity android:name=".activities.homeActivity.Webview" />
 
         <receiver
-            android:name="org.intelehealth.intelesafe.activities.homeActivity.DeviceBootReceiver"
+            android:name=".activities.homeActivity.DeviceBootReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.intent.action.BOOT_COMPLETED" />
             </intent-filter>
         </receiver>
-        <receiver android:name="org.intelehealth.intelesafe.activities.homeActivity.AlarmReceiver" /> <!-- Provider added for FileProvider with a unique authority... -->
+        <receiver android:name=".activities.homeActivity.AlarmReceiver" /> <!-- Provider added for FileProvider with a unique authority... -->
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
@@ -74,62 +70,61 @@
         </provider>
 
         <activity
-            android:name="org.intelehealth.intelesafe.activities.chooseLanguageActivity.ChooseLanguageActivity"
+            android:name=".activities.chooseLanguageActivity.ChooseLanguageActivity"
             android:theme="@style/AppTheme.NoActionBar" />
-
         <activity
-            android:name="org.intelehealth.intelesafe.activities.introActivity.IntroActivity"
+            android:name=".activities.introActivity.IntroActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.privacyNoticeActivity.PrivacyNotice_Activity"
+            android:name=".activities.privacyNoticeActivity.PrivacyNotice_Activity"
             android:label="@string/title_activity_privacy_notice"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.additionalDocumentsActivity.AdditionalDocumentsActivity"
+            android:name=".activities.additionalDocumentsActivity.AdditionalDocumentsActivity"
             android:label="@string/title_activity_additional_documents"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.patientSurveyActivity.PatientSurveyActivity"
+            android:name=".activities.patientSurveyActivity.PatientSurveyActivity"
             android:label="@string/title_activity_patient_survey"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.physcialExamActivity.PhysicalExamActivity"
+            android:name=".activities.physcialExamActivity.PhysicalExamActivity"
             android:label="@string/title_activity_physical_exam"
-            android:parentActivityName="org.intelehealth.intelesafe.activities.pastMedicalHistoryActivity.PastMedicalHistoryActivity"
+            android:parentActivityName=".activities.pastMedicalHistoryActivity.PastMedicalHistoryActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.familyHistoryActivity.FamilyHistoryActivity"
+            android:name=".activities.familyHistoryActivity.FamilyHistoryActivity"
             android:label="@string/title_activity_family_history"
-            android:parentActivityName="org.intelehealth.intelesafe.activities.pastMedicalHistoryActivity.PastMedicalHistoryActivity"
+            android:parentActivityName=".activities.pastMedicalHistoryActivity.PastMedicalHistoryActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.pastMedicalHistoryActivity.PastMedicalHistoryActivity"
+            android:name=".activities.pastMedicalHistoryActivity.PastMedicalHistoryActivity"
             android:label="@string/title_activity_past_medical_history"
-            android:parentActivityName="org.intelehealth.intelesafe.activities.questionNodeActivity.QuestionNodeActivity"
+            android:parentActivityName=".activities.questionNodeActivity.QuestionNodeActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.questionNodeActivity.QuestionNodeActivity"
+            android:name=".activities.questionNodeActivity.QuestionNodeActivity"
             android:label="@string/title_activity_question_node"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.complaintNodeActivity.ComplaintNodeActivity"
+            android:name=".activities.complaintNodeActivity.ComplaintNodeActivity"
             android:label="@string/title_activity_complaint_node"
-            android:parentActivityName="org.intelehealth.intelesafe.activities.identificationActivity.IdentificationActivity"
+            android:parentActivityName=".activities.identificationActivity.IdentificationActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.visitSummaryActivity.VisitSummaryActivity"
+            android:name=".activities.visitSummaryActivity.VisitSummaryActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_visit_summary"
-            android:parentActivityName="org.intelehealth.intelesafe.activities.homeActivity.HomeActivity"
+            android:parentActivityName=".activities.homeActivity.HomeActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
@@ -137,41 +132,41 @@
                 android:value="org.intelehealth.intelesafe.activities.homeActivity.HomeActivity" />
         </activity>
         <activity
-            android:name="org.intelehealth.intelesafe.activities.vitalActivity.VitalsActivity"
+            android:name=".activities.vitalActivity.VitalsActivity"
             android:label="@string/title_activity_vitals"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.patientDetailActivity.PatientDetailActivity"
+            android:name=".activities.patientDetailActivity.PatientDetailActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.cameraActivity.CameraActivity"
+            android:name=".activities.cameraActivity.CameraActivity"
             android:label="@string/title_activity_camera"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.activitySync.ActivitySync"
+            android:name=".activities.activitySync.ActivitySync"
             android:label="@string/title_activity_sync"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.videoLibraryActivity.VideoLibraryActivity"
+            android:name=".activities.videoLibraryActivity.VideoLibraryActivity"
             android:label="@string/title_activity_video_library"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.activePatientsActivity.ActivePatientActivity"
+            android:name=".activities.activePatientsActivity.ActivePatientActivity"
             android:label="@string/title_activity_active_patient"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.todayPatientActivity.TodayPatientActivity"
+            android:name=".activities.todayPatientActivity.TodayPatientActivity"
             android:label="@string/title_activity_today_patient"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.searchPatientActivity.SearchPatientActivity"
+            android:name=".activities.searchPatientActivity.SearchPatientActivity"
             android:label="@string/title_activity_search_patient"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -187,22 +182,22 @@
                 android:value="org.intelehealth.intelesafe.activities.homeActivity.HomeActivity" />
         </activity>
         <activity
-            android:name="org.intelehealth.intelesafe.activities.identificationActivity.IdentificationActivity"
+            android:name=".activities.identificationActivity.IdentificationActivity"
             android:label="@string/title_activity_identification"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.settingsActivity.SettingsActivity"
+            android:name=".activities.settingsActivity.SettingsActivity"
             android:configChanges="orientation|keyboardHidden"
             android:label="@string/title_activity_settings"
-            android:parentActivityName="org.intelehealth.intelesafe.activities.homeActivity.HomeActivity"
+            android:parentActivityName=".activities.homeActivity.HomeActivity"
             android:screenOrientation="portrait">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.intelehealth.intelesafe.activities.homeActivity.HomeActivity" />
         </activity>
         <activity
-            android:name="org.intelehealth.intelesafe.activities.loginActivity.LoginActivity"
+            android:name=".activities.loginActivity.LoginActivity"
             android:label="@string/title_activity_login"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
@@ -221,7 +216,7 @@
                 android:value="org.intelehealth.intelesafe.activities.homeActivity.HomeActivity" />
         </activity>
         <activity
-            android:name="org.intelehealth.intelesafe.activities.splash_activity.SplashActivity"
+            android:name=".activities.splash_activity.SplashActivity"
             android:configChanges="orientation|keyboardHidden|screenSize"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar">
@@ -232,27 +227,27 @@
             </intent-filter>
         </activity>
         <activity
-            android:name="org.intelehealth.intelesafe.activities.setupActivity.SetupActivity"
+            android:name=".activities.setupActivity.SetupActivity"
             android:label="@string/title_activity_setup"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.languageActivity.LanguageActivity"
+            android:name=".activities.languageActivity.LanguageActivity"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name="org.intelehealth.intelesafe.activities.signupActivity.SignupActivity"
+            android:name=".activities.signupActivity.SignupActivity"
             android:label="Signup"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
 
         <provider
-            android:name="org.intelehealth.intelesafe.activities.searchPatientActivity.SearchSuggestionProvider"
+            android:name=".activities.searchPatientActivity.SearchSuggestionProvider"
             android:authorities="org.intelehealth.intelesafe.activities.searchPatientActivity.SearchSuggestionProvider"
             android:exported="false" />
 
         <receiver
-            android:name="org.intelehealth.intelesafe.syncModule.BootCompleteReceiver"
+            android:name=".syncModule.BootCompleteReceiver"
             android:enabled="true"
             android:exported="false">
             <intent-filter>
@@ -261,7 +256,7 @@
         </receiver>
 
         <service
-            android:name="org.intelehealth.intelesafe.utilities.OpenMRSAccountAuthenticatorService"
+            android:name=".utilities.OpenMRSAccountAuthenticatorService"
             android:exported="false">
             <intent-filter>
                 <action android:name="android.accounts.AccountAuthenticator" />
@@ -272,21 +267,22 @@
                 android:resource="@xml/authenticator" />
         </service>
         <service
-            android:name="org.intelehealth.intelesafe.services.RunAfterBootService"
+            android:name=".services.RunAfterBootService"
             android:enabled="true"
             android:exported="false"
             android:permission="" />
-        <service android:name="org.intelehealth.intelesafe.services.DownloadService" />
-        <service android:name="org.intelehealth.intelesafe.services.MyIntentService" />
-        <service android:name="org.intelehealth.intelesafe.services.LastSyncIntentService" /> <!-- Firebase Services -->
-        <service android:name="org.intelehealth.intelesafe.services.UpdateDownloadPrescriptionService" />
-        <service android:name="org.intelehealth.intelesafe.services.fcm_service.FCMService">
+        <service android:name=".services.DownloadService" />
+        <service android:name=".services.MyIntentService" />
+        <service android:name=".services.LastSyncIntentService" /> <!-- Firebase Services -->
+        <service android:name=".services.UpdateDownloadPrescriptionService" />
+        <service android:name=".services.fcm_service.FCMService">
             <intent-filter>
                 <action android:name="com.google.firebase.MESSAGING_EVENT" />
             </intent-filter>
         </service>
+
         <receiver
-            android:name="org.intelehealth.intelesafe.utilities.RTCMessageReceiver"
+            android:name=".utilities.RTCMessageReceiver"
             android:enabled="true"
             android:exported="true">
             <intent-filter>
