--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,14 +38,12 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true"
         tools:replace="android:label">
-
         <meta-data
             android:name="com.google.firebase.messaging.default_notification_icon"
-            android:resource="@mipmap/ic_launcher" />
+            android:resource="@mipmap/ic_launcher_round" />
         <!--<meta-data
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorPrimary" />-->
-
 
         <activity android:name="org.intelehealth.swasthyasamparkp.activities.videosActivity.VideosActivity"></activity>
         <activity
@@ -142,6 +140,7 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.intelehealth.swasthyasamparkp.activities.homeActivity.HomeActivity" />
+
         </activity>
         <activity
             android:name="org.intelehealth.swasthyasamparkp.activities.vitalActivity.VitalsActivity"
@@ -226,6 +225,10 @@
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="org.intelehealth.swasthyasamparkp.activities.homeActivity.HomeActivity" />
+            <intent-filter>
+                <action android:name="FCM_PLUGIN_HOME_ACTIVITY" />
+                <category android:name="android.intent.category.DEFAULT" />
+            </intent-filter>
         </activity>
         <activity
             android:name="org.intelehealth.swasthyasamparkp.activities.splash_activity.SplashActivity"
@@ -313,7 +316,7 @@
             android:enabled="true"
             android:exported="true">
             <intent-filter>
-                <action android:name="org.intelehealth.intelesafe.RTC_MESSAGING_EVENT" />
+                <action android:name="org.intelehealth.swasthyasamparkp.RTC_MESSAGING_EVENT" />
             </intent-filter>
         </receiver>
     </application>
