Added patient history section on profile

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -45,6 +45,10 @@
             android:name="com.google.firebase.messaging.default_notification_color"
             android:resource="@color/colorPrimary" />-->
 
+        <activity android:name=".activities.profile.ProfileActivity"
+            android:theme="@style/AppTheme"
+            android:configChanges="orientation|keyboardHidden|screenSize"
+            android:screenOrientation="portrait"/>
         <activity android:name="org.intelehealth.swasthyasamparkp.activities.videosActivity.VideosActivity"></activity>
         <activity
             android:name="org.intelehealth.swasthyasamparkp.activities.appointments.AppointmentsActivity"
@@ -84,6 +88,7 @@
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
             android:name="org.intelehealth.swasthyasamparkp.activities.introActivity.IntroActivity"
+            android:label="@string/about_swasthya_sampark"
             android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
